Support refering to implicit @timestamp field in time-based aggregations
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>